--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,8 +1,12 @@
 find_package(GTest REQUIRED)
 
-enable_testing()
+file(GLOB_RECURSE TEST_SOURCES test_*.cpp)
 
-add_executable(run_test tests.cpp ../src/tridiagonal_solver.cpp)
-target_link_libraries(run_test GTest::gtest_main)
-
-add_test(Alltest run_test)
+foreach (TEST_FILE IN LISTS TEST_SOURCES)
+    get_filename_component(TEST_FILE_NAME ${TEST_FILE} NAME_WE)
+    set(EXECUTABLE_NAME run_${TEST_FILE_NAME})
+    add_executable(${EXECUTABLE_NAME} ${TEST_FILE})
+    target_compile_options(${EXECUTABLE_NAME} PRIVATE -Werror -Wall -Wextra -pedantic -Wshadow -Wconversion -Wsign-conversion)
+    target_link_libraries(${EXECUTABLE_NAME} PRIVATE ${PROJECT_NAME} GTest::gtest_main)
+    add_test(NAME ${EXECUTABLE_NAME} COMMAND ${EXECUTABLE_NAME})
+endforeach ()
