--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.20)
-project(Tridiag)
+project(SLE)
 
-add_subdirectory(tests)
+add_subdirectory(src)
 
-
-
+if (WITH_TESTS)
+    enable_testing()
+    add_subdirectory(tests)
+endif ()
